--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx webpack --config=webpack.config.js",
+    "build": "npx webpack --config=webpack.config.js --mode development",
     "test": "jasmine-ts --config=jasmine.json"
   },
   "author": "Yamit Cardenas",
@@ -14,6 +14,7 @@
     "jasmine": "^3.10.0",
     "jasmine-spec-reporter": "^7.0.0",
     "jasmine-ts": "^0.4.0",
+    "jasmine-ts-console-reporter": "^3.1.1",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4",
